--- a/moran-lerner-ufo-twitter-deception/index.html
+++ b/moran-lerner-ufo-twitter-deception/index.html
@@ -105,7 +105,7 @@
       />
     </span>
 <a href="https://web.archive.org/web/20220611200056/https://twitter.com/moranlerner/status/1535713535954657287">https://twitter.com/moranlerner/status/1535713535954657287</a></p>
-<p>Mr. Lerner denied that he was also Troy Lipman in a June 11, 2022 reply to <strong>@InvNightSchool</strong>, saying, <em>“Oh ffs. No mate. I’m not Troy😂. But on that one I actually take it as a compliment so cheers for that👍🏻”</em>. When I asked Mr. Lerner to confirm whether he operated the above Twitter accounts, he responded, “I know who owns those accounts, sure”, and that “Troy is someone else [from <strong>@TruthOfTerAvaya</strong> and <strong>@truthbearer20</strong>] entirely”.</p>
+<p>Mr. Lerner denied that he was also Troy Lipman in a June 11, 2022 reply to <strong>@InvNightSchool</strong>, saying, <em>“Oh ffs. No mate. I’m not Troy😂. But on that one I actually take it as a compliment so cheers for that👍🏻”</em>. When I asked Mr. Lerner on July 29, 2022 to confirm whether he operated the above Twitter accounts, he responded, “I know who owns those accounts, sure”, and that “Troy is someone else [from <strong>@TruthOfTerAvaya</strong> and <strong>@truthbearer20</strong>] entirely”.</p>
 <p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto; max-width: 630px; "
